; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-resp.c_resp_parse.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-resp.c_resp_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @resp_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @resp_parse(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @LCHECK2(i32 %9, i32 1)
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @ND_TCHECK(i32 %12)
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  switch i32 %16, label %42 [
    i32 128, label %17
    i32 129, label %22
    i32 130, label %27
    i32 131, label %32
    i32 132, label %37
  ]

17:                                               ; preds = %3
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @resp_print_simple_string(i32* %18, i32* %19, i32 %20)
  store i32 %21, i32* %8, align 4
  br label %47

22:                                               ; preds = %3
  %23 = load i32*, i32** %4, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @resp_print_integer(i32* %23, i32* %24, i32 %25)
  store i32 %26, i32* %8, align 4
  br label %47

27:                                               ; preds = %3
  %28 = load i32*, i32** %4, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* %6, align 4
  %31 = call i32 @resp_print_error(i32* %28, i32* %29, i32 %30)
  store i32 %31, i32* %8, align 4
  br label %47

32:                                               ; preds = %3
  %33 = load i32*, i32** %4, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @resp_print_bulk_string(i32* %33, i32* %34, i32 %35)
  store i32 %36, i32* %8, align 4
  br label %47

37:                                               ; preds = %3
  %38 = load i32*, i32** %4, align 8
  %39 = load i32*, i32** %5, align 8
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @resp_print_bulk_array(i32* %38, i32* %39, i32 %40)
  store i32 %41, i32* %8, align 4
  br label %47

42:                                               ; preds = %3
  %43 = load i32*, i32** %4, align 8
  %44 = load i32*, i32** %5, align 8
  %45 = load i32, i32* %6, align 4
  %46 = call i32 @resp_print_inline(i32* %43, i32* %44, i32 %45)
  store i32 %46, i32* %8, align 4
  br label %47

47:                                               ; preds = %42, %37, %32, %27, %22, %17
  %48 = load i32, i32* %8, align 4
  %49 = call i32 @TEST_RET_LEN(i32 %48)
  br label %50

50:                                               ; preds = %47
  ret i32 -1
}

declare dso_local i32 @LCHECK2(i32, i32) #1

declare dso_local i32 @ND_TCHECK(i32) #1

declare dso_local i32 @resp_print_simple_string(i32*, i32*, i32) #1

declare dso_local i32 @resp_print_integer(i32*, i32*, i32) #1

declare dso_local i32 @resp_print_error(i32*, i32*, i32) #1

declare dso_local i32 @resp_print_bulk_string(i32*, i32*, i32) #1

declare dso_local i32 @resp_print_bulk_array(i32*, i32*, i32) #1

declare dso_local i32 @resp_print_inline(i32*, i32*, i32) #1

declare dso_local i32 @TEST_RET_LEN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
